<resources>
    <string name="app_name">ICT災害</string>
    <string name="app_name2">namihaya</string>
    <string name="spn1Prompt">勤務消防署を選択してください</string>
    <string name="spn3Prompt">招集区分を選択してください</string>
    <string name="setPassword">パスワードを設定してください(文字数、種類の制限なし)</string>
    <string name="checkTitle">パスワードを入力してください</string>
    <string name="guide11">アプリをインストールしたら、まずは起動し、基礎データを入力します。\n\n基礎データ入力ボタンは「震災、風水害、国民保、緊援隊」画面の上部にあります。</string>
    <string name="guide12">①勤務消防署、②大津波・津波警報時参集指定署、③非常招集区分をそれぞれタップし、一覧から選択します。\n誤ったデータを入力すると参集指定署等が変わりますので確実に入力してください。\n\n④基礎データを入力後に「登録」をタップします。「登録」をしなければ手が触れたりした場合に基礎データが変わり、招集確認を正確に行うことができません。\n\n⑤これで基礎データの入力は終了です。事象ボタンのどれかをタップし操作画面に展開します。</string>
    <string name="guide21">招集連絡に必要なデータ入力を行います。\n基礎データ入力画面下部、連絡網データ操作の新規登録をタップします。</string>
    <string name="guide22">ポップアップした画面に必要な情報を入力または選択します。\n全ての項目に入力が終われば画面下の「登録」をタップします。\n\nこれで登録完了です。</string>
    <string name="guide23">登録したデータは一覧ボタンをタップし確認してください。</string>
    <string name="guide24">ポップアップした画面にパスワードを入力します。\n「入力」をタップすると一覧表が表示されます。</string>
    <string name="guide25">電話番号、メールアドレスのタップで電話、メール送信が行えます。</string>
    <string name="guide26">招集連絡データの修正又は削除が必要な場合は「修正/削除」ボタンをタップし行います。</string>
    <string name="guide27">ポップアップした画面にパスワードを入力します。\n「入力」をタップすると一覧表が表示されます。</string>
    <string name="guide28">内容を修正し「修正」をタップします。\n削除が必要な場合は「削除」をタップすれば、データの削除が完了します。</string>
    <string name="guide221">①エクセルデータの作成\n下記の入力例を参考に氏名、電話番号、メールアドレス、非常招集区分、担当、グループ、参集場所を入力してください。\n\n※非常招集区分は「数字のみ」を必ず【半角】で入力してください。\n(表示は「4号」と表示されますが、データには「号」を含めないでください。)\n\n※参集場所が区役所の場合は「区役所」を省略しないでください。\n○ 旭区役所　　X 旭\n\n※改めてCSVファイルを読み込ませたい時は、一度アプリを削除して、再度アプリをインストールしてから読み込ませてください。(データは上書きされず、二重に追加されてしまいます。)</string>
    <string name="guide222">②エクセルデータの保存\n作成したデータに名前を付けて保存します。\n保存にあたりファイルの種類を「ＣＳＶ（カンマ区切り）」とします。</string>
    <string name="guide223">③文字コードの変更\nWindowsアクセサリのメモ帳を起動し先ほどＣＳＶ形式で保存したファイルを呼び出します。\n呼び出す際、「テキスト文書（＊.txt）」から「すべてのファイル」切り替えファイルを表示させます。</string>
    <string name="guide224">④メモ帳で表示した連絡網データの保存\n連絡網データを表示し「氏名、電話番号、メールアドレス、非常招集区分、担当、グループ、参集場所」が入力されているのを確認します。\n確認後、文字コードを「UTF-8」に変更し名前を付けて保存します。</string>
    <string name="guide225">⑤作成したデータの送信\n④で保存したデータを個人所有のスマートフォンにメール送信します。\n※ダウンロードが必要なためGメール等で送信します。</string>
    <string name="guide226">⑥Gメールの受信及びデータのダウンロード（個人所有のスマートフォン）\n個人所有スマートフォンに送信されたGメール等を展開し、連絡網データをダウンロードします。\nGメールの下部にスクロールしダウンロードマークをタップします。</string>
    <string name="guide227">⑦個人所有のスマートフォンへの取り込み（個人所有のスマートフォン）</string>
    <string name="guide228">⑧連絡網データ取り込み後のデータの削除（個人所有のスマートフォン）\n連絡網データを個人所有のスマートフォンに取り込んだあとはダウンロードデータを削除してください。</string>
    <string name="guide229">⑨その他\n１件ごとの電話番号等の登録はアプリ説明書「連絡網データ操作」を参照してください。</string>
    <string name="guide31">各事象操作画面の上部、基礎データ入力画面の下部に切り替えボタンがあります。\n\n各ボタンをタップすることにより震災、風水害、国民保護、緊援隊の事象操作画面に切り替えることができます。</string>
    <string name="guide411">上のボタンで大阪市域で地震、津波警報等が発生した場合の非常招集基準を確認することができます。\n「大阪市域で震度４、津波警報が発表された場合」の非常招集について確認します。\n\nまず、大阪市域の震度階「震度４」をタップします。\n※震度階については、気象庁が発表した各区の最大震度とします。</string>
    <string name="guide412">次に、「大津波警報」、「津波警報」、「警報なし」のどれかを選択します。\nここでは、「津波警報」をタップします。\n※津波警報は、気象庁から大阪府に発表された場合に適用するものとします。</string>
    <string name="guide413">津波警報発表時の参集先が表示されます。\nこの例では、津波警報発表時の参集指定署への招集が確認されました。</string>
    <string name="guide421">各事象操作画面の中央に非常招集基準確認ボタンがあります。\n①非常警備の基準が確認できます。\n②気象警報発表に伴い参集の可否が確認できます。\n③河川水位上昇に伴い参集の可否が確認できます。</string>
    <string name="guide424">参集の可否、参集場所を確認することができます。\nまた、該当署ボタンをタップすれば、非常警備該当署が確認できます。</string>
    <string name="guide431">上のボタンで国民保護事態時の消防局の非常招集基準を確認することができます。\n\n３号非常招集が発令された時を想定しボタンをタップします。</string>
    <string name="guide432">３号非常招集基準の内容と招集規模を確認することができます。</string>
    <string name="guide441">上のボタンで緊急消防援助隊大阪府大隊の出場を確認することができます。\n地震については、［地震（震央）「陸」］　［地震（震央）「海」］　アクションプラン　ボタンで確認することができます。\nその他［大津波・噴火］、［特殊災害（NBC含む）］の出場基準を確認することができます。\n\nまず、「和歌山県で震度６強、震央は陸」の地震が発生した場合の大阪府大隊の出場の可否について確認します。\n震央が「陸」なので　［地震（震央）「陸」］　ボタンをタップします。</string>
    <string name="guide442">次に、「震度６強」（特別区６弱）をタップします。</string>
    <string name="guide443">次に、震央都道府県の「和歌山県」をタップします。</string>
    <string name="guide444">和歌山県への応援出動結果が表示されます。</string>
    <string name="guide52">河川水位、気象警報、渋滞情報サイトなどを閲覧することができます。</string>
    <string name="guide53">河川水位、気象警報、渋滞情報サイトなどを閲覧することができます。</string>
    <string name="guide63">■データ全件一覧表示\n　データ全件一覧を表示させ、個別に電話、メール送信することが可能です。\n\n■グループ検索\n　所属、勤務区分を選択し検索します。　個別に電話、メール送信が可能\n　また、メールは一斉送信することが可能です。</string>
    <string name="guide64">個別に電話する場合は電話番号をタップ、メール送信する場合はアドレスをタップします。\n\nグループに一斉メールする場合は「メール一斉送信」をタップします。</string>
</resources>
