<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
              android:id="@+id/guide44"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="４　非常招集基準確認(緊援隊)"
            android:textColor="#111111"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/guide441"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide441"
            android:textColor="#111111"
            android:textSize="16sp"
            android:layout_marginBottom="2dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/guide442"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide442"
            android:textColor="#111111"
            android:textSize="16sp"
            android:layout_marginBottom="2dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/guide443"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide443"
            android:textColor="#111111"
            android:textSize="16sp"
            android:layout_marginBottom="2dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/guide444"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide444"
            android:textColor="#111111"
            android:textSize="16sp"
            android:layout_marginBottom="2dp"/>

    </LinearLayout>
</ScrollView>