<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
              android:id="@+id/guide41"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="４　非常招集基準確認(震災)"
            android:textColor="#111111"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/guide411"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide411"
            android:textColor="#111111"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/guide412"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide412"
            android:textColor="#111111"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/guide413"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide413"
            android:textColor="#111111"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
</ScrollView>